<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/user_header">

        <EditTextPreference
            app:key="user_id"
            app:title="@string/user_id_title"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/userId" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sensor_header">

        <!--        <EditTextPreference-->
        <!--            app:key="sensor_refresh_rate"-->
        <!--            app:title="@string/sensor_refresh_rate_title"-->
        <!--            app:useSimpleSummaryProvider="true"-->
        <!--            android:inputType="number"-->
        <!--            android:defaultValue="@string/refresh_rate" />-->

        <!--            app:defaultValue="52"-->

        <SeekBarPreference
            app:min="40"
            android:max="130"
            app:key="sensor_refresh_rate"
            app:title="@string/sensor_refresh_rate_title"
            app:adjustable="true"
            app:isPreferenceVisible="true"
            app:showSeekBarValue="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/connection_header">

        <EditTextPreference
            app:key="ip"
            app:title="@string/ip_title"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/hostname" />

        <EditTextPreference
            app:key="port"
            app:title="@string/port_title"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/port" />

        <!--        <ListPreference-->
        <!--            app:defaultValue="reply"-->
        <!--            app:entries="@array/reply_entries"-->
        <!--            app:entryValues="@array/reply_values"-->
        <!--            app:key="reply"-->
        <!--            app:title="@string/reply_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

        <SwitchPreferenceCompat
            app:key="stream"
            app:title="@string/stream_title"
            android:defaultValue="@string/stream" />

    </PreferenceCategory>

    <!--    <PreferenceCategory app:title="@string/sync_header">-->


    <!--        <SwitchPreferenceCompat-->
    <!--            app:dependency="sync"-->
    <!--            app:key="attachment"-->
    <!--            app:summaryOff="@string/attachment_summary_off"-->
    <!--            app:summaryOn="@string/attachment_summary_on"-->
    <!--            app:title="@string/attachment_title" />-->

    <!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/version_header">
        <Preference
            android:title="Version"
            android:summary="@string/versionName"></Preference>
    </PreferenceCategory>
</PreferenceScreen>
